--- a/style.css
+++ b/style.css
@@ -99,14 +99,14 @@ span:hover{
   border: 1px solid white;
   
 }
-ion-icon {
+/* ion-icon {
   font-size: 24px;
-  color: white;
-  border: 1px solid white;
-  border-radius: 50%;
+  /* color: white;
+  border: 1px solid white; */
+  /* border-radius: 50%;
   margin-right: 15px;
-  padding:10px;
-}
+  padding:10px; */
+/* } */ */
 .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
 
